product list page restyled, background cutoff error fixed in layout

--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -33,8 +33,8 @@
   text-decoration: underline;
 }
 
-.logo:hover{
-}
+/* .logo:hover{
+} */
 .promo{
   padding-right: 550px;
 
